feat: command modules and better structure